# perfect-hash

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
cmake/: Doctest.cmake
inc/perfect-hash/: function.hpp  iterator.hpp  map.hpp  unordered_map.hpp  unordered_map_tests.cpp
src/: main.cpp
